[package]
name = "bittensor"
version = "0.1.0"
edition = "2021"
description = "Standalone Rust SDK for Bittensor blockchain interactions"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/opentensor/bittensor-rust-sdk"
keywords = ["bittensor", "blockchain", "substrate", "cryptocurrency", "decentralized"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[features]
default = ["wallet"]
wallet = []
generate-metadata = ["subxt-codegen", "subxt-metadata", "subxt-utils-fetchmetadata", "parity-scale-codec"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Substrate/Polkadot interaction
subxt = { workspace = true }
sp-core = { workspace = true }

# Crypto and encoding
hex = { workspace = true }
rand = { workspace = true }

# Time and utilities
chrono = { workspace = true }
home = { workspace = true }

# Metadata generation dependencies (only used by binary)
subxt-codegen = { workspace = true, optional = true }
subxt-metadata = { workspace = true, optional = true }
subxt-utils-fetchmetadata = { workspace = true, features = ["url"] , optional = true}
parity-scale-codec = { workspace = true, optional = true }

[build-dependencies]
tokio = { workspace = true }
parity-scale-codec = { workspace = true }

[[bin]]
name = "generate-metadata"
path = "src/bin/generate-metadata.rs"
required-features = ["generate-metadata"]

[dev-dependencies]
wiremock = { workspace = true }
futures = { workspace = true }
tokio-test = "0.4"
