[package]
name = "bittensor-rs"
version = "0.2.0"
edition = "2021"
authors = ["covenant.ai"]
description = "Standalone Rust SDK for Bittensor blockchain interactions"
documentation = "https://docs.rs/bittensor-rs"
homepage = "https://github.com/one-covenant/bittensor-rs"
repository = "https://github.com/one-covenant/bittensor-rs"
readme = "README.md"
license = "MIT"
rust-version = "1.70"
keywords = [
    "bittensor",
    "blockchain",
    "substrate",
    "cryptocurrency",
    "decentralized",
]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[features]
default = ["wallet"]
wallet = []
generate-metadata = ["subxt-codegen", "subxt-metadata", "parity-scale-codec"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Substrate/Polkadot interaction
subxt = { workspace = true }
subxt-signer = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# Crypto and encoding
hex = { workspace = true }
rand = { workspace = true }

# Time and utilities
chrono = { workspace = true }
home = { workspace = true }

# Metadata generation dependencies (only used by binary)
subxt-codegen = { workspace = true, optional = true }
subxt-metadata = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, optional = true }

[[bin]]
name = "generate-metadata"
path = "src/bin/generate-metadata.rs"
required-features = ["generate-metadata"]

[build-dependencies]
sha2 = { workspace = true }
subxt-codegen = { workspace = true }
subxt-metadata = { workspace = true }
parity-scale-codec = { workspace = true }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
subxt-utils-fetchmetadata = { version = "0.44.0", features = ["url"] }

[dev-dependencies]
wiremock = { workspace = true }
futures = { workspace = true }
tokio-test = "0.4"
